# -cmake

./: CMakeLists.txt  StringCalculator.cpp
Calculator/: CMakeLists.txt  Negatives.cpp  Negatives.h  add.cpp  add.h  getnumbers.cpp  getnumbers.h  stringcalculator.cpp  stringcalculator.h
